updated the calendar list and also the colours for each date  and database connection done